# indiaset

./: .gitignore  README.md  pyproject.toml
indiaset/: __init__.py  census.py  resolve.py
indiaset/data/: district_aliases.csv
tests/: test_resolve.py
